css-scroll-snap: scroll-snap-align keywords should not be reversed

According to spec, if two values specified for the ScrollSnapAlign
these values should be set as the block axis and inline axis respectively.
But the current implementation does not follow this so it should be updated.

refernce: https://drafts.csswg.org/css-scroll-snap-1/#propdef-scroll-snap-align
Bug: 891282
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Id765b44c86ce4f2aeb5e85ec74f83a36cc282196
Reviewed-on: https://chromium-review.googlesource.com/c/1267055
Reviewed-by: David Bokan <bokan@chromium.org>
Reviewed-by: Eric Willigers <ericwilligers@chromium.org>
Commit-Queue: Eric Willigers <ericwilligers@chromium.org>
Cr-Commit-Position: refs/heads/master@{#597735}
Former-commit-id: a31d6d6cf095f81e5a14c4845d2cddff92e539f9